src/capi/fitpack_surfaces_c.f90

! **************************************************************************************************
!                                ____________________  ___   ________ __
!                               / ____/  _/_  __/ __ \/   | / ____/ //_/
!                              / /_   / /  / / / /_/ / /| |/ /   / ,<
!                             / __/ _/ /  / / / ____/ ___ / /___/ /| |
!                            /_/   /___/ /_/ /_/   /_/  |_\____/_/ |_|
!
!                                     A Curve Fitting Package
!
!   fitpack_surfaces_c.f90 (module fitpack_surfaces_c)
!> @brief C interface to fitpack_surface
!
!   @author Federico Perini
!   @date   2026-08-27
!
!   References :
!     - C. De Boor, "On calculating with b-splines", J Approx Theory 6 (1972) 50-62
!     - M. G. Cox, "The numerical evaluation of b-splines", J Inst Maths Applics 10 (1972) 134-149
!     - P. Dierckx, "Curve and surface fitting with splines", Monographs on numerical analysis,
!                    Oxford university press, 1993.
!
! **************************************************************************************************

module fitpack_surfaces_c
    ! ===========================================================================================
    ! SECTION 1: Imports
    ! ===========================================================================================
    use fitpack_surfaces, only: fitpack_surface
    use fitpack_surfaces_c_types, only: fitpack_surface_c, fitpack_surface_c_null, fitpack_surface_c_typename
    use fitpack_fx_status, only: fx_status, fx_status_ok, FX_ERROR_ALLOCATION, &
                        FX_ERROR_DEALLOCATION, handle_error
    use fitpack_curves, only: fitpack_curve
    use fitpack_curves_c, only: f_pointer
    use fitpack_curves_c_types, only: fitpack_curve_c, fitpack_curve_c_null, f_type_name

    use, intrinsic :: iso_c_binding
    implicit none(type, external)
    private

    ! ===========================================================================================
    ! SECTION 2: Public Exports
    ! ===========================================================================================

    ! Core interfaces (ALWAYS export these)
    public :: fitpack_surface_c            ! Type and constructor
    public :: fitpack_surface_c_null       ! Null constant
    public :: f_pointer              ! Get Fortran pointer (non-allocating)
    public :: f_associated           ! Pointer-identity check (non bind(C))
    public :: fitpack_surface_c_is_same   ! Pointer-identity check [bind(C)]
    public :: fitpack_surface_c_allocate   ! Allocate new object [bind(C)]
    public :: fitpack_surface_c_destroy    ! Deallocate object [bind(C)]
    public :: fitpack_surface_c_copy       ! Deep copy [bind(C)]
    public :: fitpack_surface_c_associate  ! Shallow copy/pointer [bind(C)]
    public :: fitpack_surface_c_move_alloc ! Move ownership [bind(C)]

    ! Method wrappers
    public :: fitpack_surface_c_fit
    public :: fitpack_surface_c_interpolate
    public :: fitpack_surface_c_least_squares
    public :: fitpack_surface_c_surface_eval_one
    public :: fitpack_surface_c_surface_derivatives_one
    public :: fitpack_surface_c_cross_section
    public :: fitpack_surface_c_derivative_spline
    public :: fitpack_surface_c_comm_size
    public :: fitpack_surface_c_mse
    public :: fitpack_surface_c_core_comm_size
    public :: fitpack_surface_c_destroy_base
    public :: fitpack_surface_c_new_points
    public :: fitpack_surface_c_new_fit
    public :: fitpack_surface_c_surface_eval_many
    public :: fitpack_surface_c_surface_eval_gridded
    public :: fitpack_surface_c_surface_derivatives_many
    public :: fitpack_surface_c_surface_derivatives_gridded
    public :: fitpack_surface_c_integral
    public :: fitpack_surface_c_comm_pack
    public :: fitpack_surface_c_comm_expand
    public :: fitpack_surface_c_core_comm_pack
    public :: fitpack_surface_c_core_comm_expand
    public :: fitpack_surface_c_getcomp_x
    public :: fitpack_surface_c_getcomp_y
    public :: fitpack_surface_c_getcomp_z
    public :: fitpack_surface_c_getcomp_w
    public :: fitpack_surface_c_getcomp_wrk2
    public :: fitpack_surface_c_getcomp_t
    public :: fitpack_surface_c_ref_m
    public :: fitpack_surface_c_ref_nmax
    public :: fitpack_surface_c_ref_lwrk2
    public :: fitpack_surface_c_ref_bc

    ! ===========================================================================================
    ! SECTION 4: Fortran-Side Interfaces (NOT bind(C))
    ! ===========================================================================================

    !> Get pointer to embedded Fortran object
    interface f_pointer
        module procedure fitpack_surface_c_get_pointer
    end interface f_pointer

    !> Pointer-identity check (Fortran-side wrapper of the bind(C) function).
    interface f_associated
        module procedure fitpack_surface_c_is_same
    end interface f_associated

    !> Construct from Fortran object
    interface fitpack_surface_c
        module procedure fitpack_surface_c_f2c
        module procedure fitpack_surface_c_fptr2c
    end interface fitpack_surface_c

contains

    ! ===========================================================================================
    ! SECTION 5: Core Memory Management (ALWAYS IMPLEMENT)
    ! ===========================================================================================

    !> Pointer-identity check: true iff both wrappers point to the same
    !> underlying Fortran object (and that object is allocated).
    logical(c_bool) function fitpack_surface_c_is_same(this, that) &
            bind(C, name='fitpack_surface_c_is_same') result(same)
        type(fitpack_surface_c), intent(in) :: this, that
        same = logical(c_associated(this%cptr, that%cptr), kind=c_bool)
    end function fitpack_surface_c_is_same

    !> Get pointer to embedded Fortran object (non-allocating)
    function fitpack_surface_c_get_pointer(this) result(fptr)
        type(fitpack_surface_c), intent(in) :: this
        type(fitpack_surface), pointer :: fptr

        if (c_associated(this%cptr)) then
            call c_f_pointer(this%cptr, fptr)
        else
            nullify(fptr)
        end if
    end function fitpack_surface_c_get_pointer

    !> Get/allocate embedded Fortran object (internal, not bind(C))
    !> Returns .true. on success, .false. on allocation failure
    function fitpack_surface_c_pointer(this, fthis) result(success)
        type(fitpack_surface_c), intent(inout) :: this
        type(fitpack_surface), pointer, intent(inout) :: fthis
        logical :: success
        integer :: ierr

        success = .true.

        ! Try non-allocating get first
        fthis => f_pointer(this)

        ! Already associated: do nothing
        if (associated(fthis)) return

        ! Allocate if necessary
        allocate(fthis, stat=ierr)
        if (ierr /= 0) then
            success = .false.
            return
        end if

        ! Initialize and locate
        this%cptr = c_loc(fthis)
        this%is_pointer = .false._c_bool
        this%name_cptr = c_loc(fitpack_surface_c_typename)
    end function fitpack_surface_c_pointer

    !> [bind(C)] Allocate new object
    !> @param status Optional. If absent, allocation failure triggers error stop.
    subroutine fitpack_surface_c_allocate(this, status) bind(C, name='fitpack_surface_c_allocate')
        type(fitpack_surface_c), intent(inout) :: this
        type(fx_status), intent(out), optional :: status
        type(fitpack_surface), pointer :: fthis
        type(fx_status) :: stat0
        logical :: ok

        stat0 = fx_status_ok
        ok = fitpack_surface_c_pointer(this, fthis)
        if (.not. ok) stat0 = fx_status(FX_ERROR_ALLOCATION, &
            'fitpack_surface_c_allocate: allocation failed')
        call handle_error(stat0, status)
    end subroutine fitpack_surface_c_allocate

    !> [bind(C)] Deallocate object
    !> @param status Optional. If absent, deallocation failure triggers error stop.
    subroutine fitpack_surface_c_destroy(this, status) bind(C, name='fitpack_surface_c_destroy')
        type(fitpack_surface_c), intent(inout) :: this
        type(fx_status), intent(out), optional :: status
        type(fitpack_surface), pointer :: fthis
        type(fx_status) :: stat0
        integer :: ierr

        stat0 = fx_status_ok
        fthis => f_pointer(this)
        if (associated(fthis) .and. .not. this%is_pointer) then
            deallocate(fthis, stat=ierr)
            if (ierr /= 0) stat0 = fx_status(FX_ERROR_DEALLOCATION, &
                'fitpack_surface_c_destroy: deallocate failed')
        end if
        this = fitpack_surface_c_null
        call handle_error(stat0, status)
    end subroutine fitpack_surface_c_destroy

    !> [bind(C)] Copy. By default, mirrors source ownership: a view source
    !> yields a view (shallow handle copy); an owned source yields a deep
    !> copy via Fortran intrinsic assignment. Pass deep_copy=.true. to force
    !> a deep copy regardless of the source's ownership.
    !> @param deep_copy When .true., always allocate a fresh Fortran object
    !>                  and deep-copy data, even if the source is a view.
    !> @param status    Optional. If absent, errors trigger error stop.
    subroutine fitpack_surface_c_copy(this, that, deep_copy, status) &
            bind(C, name='fitpack_surface_c_copy')
        type(fitpack_surface_c), intent(inout) :: this
        type(fitpack_surface_c), intent(in)    :: that
        logical(c_bool),    intent(in), value :: deep_copy
        type(fx_status), intent(out), optional :: status
        type(fitpack_surface), pointer :: fthis, fthat
        type(fx_status) :: stat0
        logical :: ok

        stat0 = fx_status_ok
        fthat => f_pointer(that)
        if (that%is_pointer .and. .not. deep_copy) then
            this = that
        elseif (associated(fthat)) then
            ok = fitpack_surface_c_pointer(this, fthis)
            if (.not. ok) then
                stat0 = fx_status(FX_ERROR_ALLOCATION, &
                    'fitpack_surface_c_copy: allocation failed')
                goto 100
            end if
            fthis = fthat
            this%name_cptr = that%name_cptr
        else
            call fitpack_surface_c_destroy(this, stat0)
        end if
100     call handle_error(stat0, status)
    end subroutine fitpack_surface_c_copy

    !> [bind(C)] Shallow copy (pointer semantics — Fortran "associate" construct)
    !> @param status Optional. If absent, errors trigger error stop.
    subroutine fitpack_surface_c_associate(this, that, status) &
            bind(C, name='fitpack_surface_c_associate')
        type(fitpack_surface_c), intent(inout) :: this
        type(fitpack_surface_c), intent(in)    :: that
        type(fx_status), intent(out), optional :: status
        type(fx_status) :: stat0

        stat0 = fx_status_ok
        call fitpack_surface_c_destroy(this, stat0)
        if (.not. stat0%ok) goto 100
        this%cptr = that%cptr
        this%is_pointer = .true._c_bool
        this%name_cptr = that%name_cptr
100     call handle_error(stat0, status)
    end subroutine fitpack_surface_c_associate

    !> [bind(C)] Move allocation (transfer ownership)
    !> @param status Optional. If absent, errors trigger error stop.
    subroutine fitpack_surface_c_move_alloc(to, from, status) &
            bind(C, name='fitpack_surface_c_move_alloc')
        type(fitpack_surface_c), intent(inout) :: to, from
        type(fx_status), intent(out), optional :: status
        type(fx_status) :: stat0

        stat0 = fx_status_ok
        call fitpack_surface_c_destroy(to, stat0)
        if (.not. stat0%ok) goto 100
        to = from
        from = fitpack_surface_c_null
100     call handle_error(stat0, status)
    end subroutine fitpack_surface_c_move_alloc
